[package]
name = "atcoderstreak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = { version = "1.0.15", features = ["fetch"] }
toml = "0.8.19"
serde = "1.0.217"
chrono = "0.4.39"
tokio = { version = "1.43.0", features = ["full"] }
serenity = "0.12.4"
